--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tree-sitter-4dpreferences",
-  "version": "0.5.0",
+  "name": "tree-sitter-4dxml",
+  "version": "0.2.0",
   "description": "Atom language support for 4D",
   "main": "index.js",
   "scripts": {
@@ -9,12 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/miyako/tree-sitter-4dpreferences.git"
+    "url": "https://github.com/miyako/tree-sitter-4dxml.git"
   },
   "tree-sitter": [
     {
-      "scope": "4dpreferences",
+      "scope": "4dxml",
       "file-types": [
+        "4dcatalog",
+        "4dlink",
         "4dpreferences",
         "4dsettings"
       ]
@@ -27,13 +29,14 @@
   ],
   "authors": [
     "Max Brunsfeld <maxbrunsfeld@gmail.com>",
-    "Ashi Krishnan <queerviolet@github.com>"
+    "Ashi Krishnan <queerviolet@github.com>",
+    "Keisuke Miyako <keisuke.miyako@4d.com>"
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/miyako/tree-sitter-4dpreferences/issues"
+    "url": "https://github.com/miyako/tree-sitter-4dxml/issues"
   },
-  "homepage": "https://github.com/miyako/tree-sitter-4dpreferences#readme",
+  "homepage": "https://github.com/miyako/tree-sitter-4dxml#readme",
   "dependencies": {
     "nan": "^2.14.0",
     "node-gyp": "^6.1.0",
