--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "nan": "^2.14.0",
     "node-gyp": "^6.1.0",
+    "npm-check-updates": "^6.0.1",
     "tree-sitter": "^0.16.0"
   },
   "devDependencies": {
